Fixed theme switcher buttons that caused flickering

--- a/themes/ModdedAnatole/assets/scss/partials/_hugo.scss
+++ b/themes/ModdedAnatole/assets/scss/partials/_hugo.scss
@@ -29,6 +29,10 @@ a {
   }
 }
 
+.non_mostrare {
+  display: none !important;
+}
+
 blockquote {
   padding: 0 1em;
 
