--- a/themes/ModdedAnatole/assets/scss/partials/components/_themeswitch.scss
+++ b/themes/ModdedAnatole/assets/scss/partials/components/_themeswitch.scss
@@ -16,3 +16,11 @@
   }
   transition: all 0.35s ease-in;
 }
+
+.theme--dark #luna {
+  display: none !important;
+}
+
+.theme--light #sole {
+  display: none !important;
+}
